output/facebook/rocksdb/issues/219.txt
Hi:

I have tried to compile rocksdb 3.1, 3.2, and 3.3 by running "make  all". The compilation failed. Here is the error messages from compiling rocksdb 3.2

g++ -g -Wall -Werror -I. -I./include -std=c++11  -DROCKSDB_PLATFORM_POSIX  -DOS_
LINUX -fno-builtin-memcmp -DROCKSDB_ATOMIC_PRESENT -DROCKSDB_FALLOCATE_PRESENT -
DGFLAGS=google -DZLIB   -DHAVE_JEMALLOC -O2 -fno-omit-frame-pointer -Woverloaded
-virtual -c table/table_reader_bench.cc -o table/table_reader_bench.o
table/table_reader_bench.cc: In function ‘void rocksdb::{anonymous}::TableReader
Benchmark(rocksdb::Options&, rocksdb::EnvOptions&, rocksdb::ReadOptions&, int, i
nt, int, int, bool, bool, bool, bool)’:
table/table_reader_bench.cc:147:11: error: ‘MemoryBarrier’ is not a member of ‘rocksdb::port’
           port::MemoryBarrier();
           ^
table/table_reader_bench.cc:154:11: error: ‘MemoryBarrier’ is not a member of ‘rocksdb::port’
           port::MemoryBarrier();
           ^
table/table_reader_bench.cc:170:11: error: ‘MemoryBarrier’ is not a member of ‘rocksdb::port’
           port::MemoryBarrier();
           ^
table/table_reader_bench.cc:183:13: error: ‘MemoryBarrier’ is not a member of ‘rocksdb::port’
             port::MemoryBarrier();
             ^
table/table_reader_bench.cc:198:11: error: ‘MemoryBarrier’ is not a member of ‘rocksdb::port’
           port::MemoryBarrier();
           ^
make: **\* [table/table_reader_bench.o] Error 1

Please let me know what can be done to get around of this error.

Thanks,

David

I forget to mention that my OS is rhel6.5 with ppc64 architecture.

Yup, we shouldn't use port::MemoryBarrier anywhere else except `port/atomic_pointer.h`

table/table_reader_bench is just a benchmark, you don't really need to compile it. Just remove the rule for compiling table_reader_bench in Makefile and it should work.

Long-term, we'll fix this issue. :)

Igorcanadi:

Thank you very much your help. The compilation has passed after I commented out the table_reader_bench rule in Makefile. Now I have a different issue: make check failed when running db_test:
****\* Running db_test
./db_test: /usr/lib64/libstdc++.so.6: version `GLIBCXX_3.4.18' not found (requir
ed by ./db_test)
./db_test: /usr/lib64/libstdc++.so.6: version`GLIBCXX_3.4.14' not found (requir
ed by ./db_test)
./db_test: /usr/lib64/libstdc++.so.6: version `CXXABI_1.3.5' not found (required
 by ./db_test)
./db_test: /usr/lib64/libstdc++.so.6: version`GLIBCXX_3.4.15' not found (requir
ed by ./db_test)
make: **\* [check] Error 1

Regards,

David

